@@ -1,3 +1,6 @@
+  * Mouse dragging should be handled by component received initial mouse click
+  * Components can be stored in own subdirectories
+  * FPS limiter added to SLAVA application
   * Stand-alone avionics application restored
   * Initial networking support
   * Tu-104 altitude autopilot snaps to 50, not 100
